# stupiddns

./: AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.md  configure.ac  notsrv.c
